# cnoid_rover_pkgs

./: CMakeLists.txt  README.md
cnoid_rover_bringup/: CMakeLists.txt  package.xml
cnoid_rover_bringup/configuration_files/: laser_collision_zone_filter_megarover_01_sim.yaml
cnoid_rover_bringup/launch/: MegaRover_lictia.launch  MegaRover_lictia_slam.launch  multi_MegaRover_lictia.launch
cnoid_rover_bringup/model/: Intel_nuc.body  MR_addnl_parts.body  MegaRover.body  MegaRover_LiDAR_2d.body
cnoid_rover_bringup/model/resource/megarover/dae/: VLP-16.dae
cnoid_rover_bringup/model/resource/other/carrier/: megarover_plate.stl
cnoid_rover_bringup/project/: MegaRover_lictia1F_agx.cnoid  MegaRover_lictia1F_aist.cnoid  MegaRover_lictia1F_ode.cnoid  MegaRover_lictia1F_slam_aist.cnoid  Multi_MegaRover_lictia1F_agx.cnoid  Multi_MegaRover_lictia1F_aist.cnoid  Multi_MegaRover_lictia1F_ode.cnoid
cnoid_rover_control/: CMakeLists.txt  package.xml
cnoid_rover_control/include/cnoid_rover_control/: megarover_controller.h
cnoid_rover_control/param/: cnoid_rover_control.yaml
cnoid_rover_control/src/: CMakeLists.txt  MegaRoverRosNaviController.cpp
cnoid_rover_description/: CMakeLists.txt  package.xml
cnoid_rover_description/launch/: display_megarover.launch
cnoid_rover_description/launch/config/megarover/: display_megarover_01_sim.rviz
cnoid_rover_description/meshes/megarover/: dae  stl
cnoid_rover_description/urdf/megarover/: vmegarover.gv  vmegarover.urdf.xacro  vmegarover.urdf.xacro.urdf
cnoid_rover_navigation/: CMakeLists.txt  package.xml
cnoid_rover_navigation/launch/: amcl_megarover_01_sim.launch  amcl_megarover_02_sim.launch  megarover_navigation_megarover_01_sim.launch  megarover_navigation_megarover_02_sim.launch  move_base_megarover_01_sim.launch  move_base_megarover_02_sim.launch
cnoid_rover_navigation/param/: costmap_common_params_megarover_01_sim.yaml  costmap_common_params_megarover_02_sim.yaml  dwa_local_planner_params_megarover_01_sim.yaml  dwa_local_planner_params_megarover_02_sim.yaml  global_costmap_params_megarover_01_sim.yaml  global_costmap_params_megarover_02_sim.yaml  local_costmap_params_megarover_01_sim.yaml  local_costmap_params_megarover_02_sim.yaml  recovery_behaviors.yaml
cnoid_rover_navigation/rviz/: megarover_01_sim_navigation.rviz  megarover_02_sim_navigation.rviz
cnoid_rover_pkgs/: CMakeLists.txt  package.xml
cnoid_rover_slam/: CMakeLists.txt  package.xml
cnoid_rover_slam/config/: gmapping_params.yaml
cnoid_rover_slam/launch/: cnoid_rover_gmapping.launch
cnoid_rover_slam/rviz/: cnoid_rover_gmapping.rviz
