<?xml version="1.0"?>
<package format="2">
  <name>cnoid_rover_bringup</name>
  <version>1.0.0</version>
  <description>The MegaRover and MecanumRover bringup package</description>

  <license>MIT</license>
  <maintainer email="s-kumada@jadsys.co.jp">s-kumada</maintainer>
  <author email="s-kumada@jadsys.co.jp">s-kumada</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
