<?xml version="1.0"?>
<package format="2">
  <name>cnoid_rover_navigation</name>
  <version>1.0.0</version>
  <description>The cnoid_rover_navigation provides roslaunch scripts for starting the navigation.</description>
  <license>MIT</license>
  <author email="s-kumada@jadsys.co.jp">s-kumada</author>
  <maintainer email="s-kumada@jadsys.co.jp">s-kumada</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>std_msgs</depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>cnoid_rover_bringup</exec_depend>
  
</package>
