<?xml version="1.0"?>
<package format="2">
  <name>cnoid_rover_slam</name>
  <version>1.0.0</version>
  <description>
    The cnoid_turtlebot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>BSD</license>
  <maintainer email="s-kumada@jadsys.co.jp">s-kumada</maintainer>
  <author email="s-kumada@jadsys.co.jp">s-kumada</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
	<depend>roscpp</depend>
  
  <depend>sensor_msgs</depend>
  <exec_depend>cnoid_megarover_bringup</exec_depend>
</package>
